Objetivo 4 - Vistas. 1. Correciones de Vistas en Administrador.

--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -203,7 +203,7 @@
                                                     <form asp-action="Visualizado">
                                                         <div class="container-modal-btn">
                                                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="Id" />
+                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="IdN" />
                                                             <input type="hidden" value="1" name="Opcion" required />
                                                             <button type="submit" data-notification-id="@notificacionAdmin.Notificaciones.Id" class="modal__close">Cerrar</button>
                                                         </div>
@@ -244,7 +244,7 @@
                                                     <form asp-action="Visualizado">
                                                         <div class="container-modal-btn">
                                                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="Id" />
+                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="IdN" />
                                                             <input type="hidden" value="1" name="Opcion" required />
                                                             <button type="submit" data-notification-id="@notificacionAdmin.Notificaciones.Id" class="modal__close">Cerrar</button>
                                                         </div>
@@ -285,7 +285,7 @@
                                                     <form asp-action="Visualizado">
                                                         <div class="container-modal-btn">
                                                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="Id" />
+                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="IdN" />
                                                             <input type="hidden" value="1" name="Opcion" required />
                                                             <button type="submit" data-notification-id="@notificacionAdmin.Notificaciones.Id" class="modal__close">Cerrar</button>
                                                         </div>
@@ -326,7 +326,7 @@
                                                     <form asp-action="Visualizado">
                                                         <div class="container-modal-btn">
                                                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="Id" />
+                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="IdN" />
                                                             <input type="hidden" value="1" name="Opcion" required />
                                                             <button type="submit" data-notification-id="@notificacionAdmin.Notificaciones.Id" class="modal__close">Cerrar</button>
                                                         </div>
@@ -367,7 +367,7 @@
                                                     <form asp-action="Visualizado">
                                                         <div class="container-modal-btn">
                                                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="Id" />
+                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="IdN" />
                                                             <input type="hidden" value="1" name="Opcion" required />
                                                             <button type="submit" data-notification-id="@notificacionAdmin.Notificaciones.Id" class="modal__close">Cerrar</button>
                                                         </div>
@@ -408,7 +408,7 @@
                                                     <form asp-action="Visualizado">
                                                         <div class="container-modal-btn">
                                                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="Id" />
+                                                            <input type="hidden" asp-for="@notificacionAdmin.Notificaciones.Id" name="IdN" />
                                                             <input type="hidden" value="1" name="Opcion" required />
                                                             <button type="submit" data-notification-id="@notificacionAdmin.Notificaciones.Id" class="modal__close">Cerrar</button>
                                                         </div>
