Objetivo 4 - Vistas. 1. Correcion en Variables de insercion a metodos controladores.

--- a/act_Application/Views/Notificaciones/Index.cshtml
+++ b/act_Application/Views/Notificaciones/Index.cshtml
@@ -98,7 +98,7 @@
                                                 </div>
                                                 <div class="modal-secundaria" id="modal-resp-@notificacionAdmin.Notificaciones.Id">
                                                     <div class="modal-secundaria__container">
-                                                        <h2 class="modal__title">Establesca la Fecha de Pago Total del Prestamo</h2>
+                                                        <h2 class="modal__title">Aceptar Usuario</h2>
                                                         <div class="modal-secundaria__content">
                                                             <form asp-action="Visualizado">
                                                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
