--- a/act_Application/wwwroot/css/General/Notificaciones/Notificacion_1.css
+++ b/act_Application/wwwroot/css/General/Notificaciones/Notificacion_1.css
@@ -190,7 +190,18 @@ body:not(.dark) .content-text {
         background-color: #ff6a00;
     }
 
-.container-modal-btn {
+.S-container-modal-btn {
+    display: flex;
+    justify-content: space-between;
+    align-content: center;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px; /* Separación del botón cerrar */
+}
+
+.N-container-modal-btn {
     display: flex;
     justify-content: space-between;
     align-content: center;
